config/kubernetes/mti-hmg-td/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-tester-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: endpoints-ip
    ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: 'true'
spec:
  tls:
    - hosts:
        - app-tester.hml.app.cloud.mti.mt.gov.br
      secretName: app-tester-tls
  rules:
    - host: app-tester.hml.app.cloud.mti.mt.gov.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-tester-service
                port:
                  number: 80
